fix(booking-info): add orderCreatedAt prop to TabTracking component to display order creation time fix(booking-info): change label from "Tracking Detail" to "Tracking Details" for better grammar fix(booking-info): change label from "Item detail" to "DELIVERY ITEM" for better semantics fix(booking-info): change label from "CUSTOMER INFO" to "Customer Info" for better readability fix(booking-info): change label from "Address" to "DELIVERY ADDRESS" for better semantics fix(tab-tracking): add logic to handle "order_placed" status and display order creation time fix(assign-driver): add value prop to DriverOptions component to highlight currently assigned driver fix(globals.css): add mr-0 to .ant-tag class for better alignment fix(number.ts): change durationFormat function to use pluralize function for better grammar fix(string.ts): change format string in formatDate function to use 12-hour format instead of 24-hour format feat(booking-model): change cargoWeight.name to cargoWeight.description for better semantics feat(order-model): add createdAt property to store order creation time

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@ body {
 }
 
 .ant-tag {
-  @apply font-medium rounded-full px-2;
+  @apply font-medium rounded-full px-2 mr-0;
 }
 
 .ant-segmented .ant-segmented-item-selected {
